--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title class="title">Káva</title>
-  <link rel="stylesheet" href="../Káva/style.css">
+  <link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.1/css/bootstrap.min.css">
 </head>
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark my-navbar nav-link" >
     <div class="container">
-      <a class="navbar-brand" href="../Káva/index.html">Káva</a>
+      <a class="navbar-brand" href="./index.html">Káva</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -20,19 +20,19 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="../Káva/odrudykavy/index.html">Odrůdy kávy</a>
+            <a class="nav-link" href="./odrudykavy/index.html">Odrůdy kávy</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../Káva/puvodKavy/index.html">Původ kávy</a>
+            <a class="nav-link" href="./puvodKavy/index.html">Původ kávy</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../Káva/druhykavy/index.html">Druhy kávy</a>
+            <a class="nav-link" href="./druhykavy/index.html">Druhy kávy</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../Káva/historiekavy/index.html">Historie kávy</a>
+            <a class="nav-link" href="./historiekavy/index.html">Historie kávy</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../Káva/pripravakavy/index.html">Příprava kávy</a>
+            <a class="nav-link" href="./pripravakavy/index.html">Příprava kávy</a>
           </li>
         </ul>
       </div>
@@ -48,13 +48,13 @@
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="../Káva/images/Coffee_art.jpg" class="d-block w-100"  alt="Coffee_art">
+        <img src="./images/Coffee_art.jpg" class="d-block w-100"  alt="Coffee_art">
       </div>
       <div class="carousel-item">
-        <img src="../Káva/images/Coffee_machine.jpg" class="d-block w-100" alt="Coffee_machine">
+        <img src="../images/Coffee_machine.jpg" class="d-block w-100" alt="Coffee_machine">
       </div>
       <div class="carousel-item">
-        <img src="../Káva/images/Coffee_beans.jpg" class="d-block w-100" alt="Coffee_beans">
+        <img src="./images/Coffee_beans.jpg" class="d-block w-100" alt="Coffee_beans">
       </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-bs-slide="prev">
@@ -76,11 +76,11 @@
           <p>Káva je oblíbený nápoj po celém světě. Její pověstná chuť a povzbuzující účinky ji činí jedním z nejoblíbenějších nápojů. Připojte se k nám a objevte více o kávě a jejích zajímavostech.</p>
           <p>Káva je původem z tropických oblastí, zejména z Jižní Ameriky, Afrického rohu a jihovýchodní Asie. Každá země původu má své specifické odrůdy a metody pěstování, což ovlivňuje chuť a aroma kávy. Na mojich stránkách najdete informace o různých druzích kávy a zemích, ze kterých pochází.</p>
           <p>Káva je také jedním z nejvíce konzumovaných nápojů na světě a nabízí širokou škálu způsobů přípravy. Bez ohledu na to, zda preferujete filtrovanou kávu, espresso nebo oblíbené kávové speciality, můžete se těšit na bohatou paletu chutí a vůní.</p>
-          <a href="../Káva/puvodKavy/index.html" class="btn btn-primary">Původ kávy</a>
-          <a href="../Káva/druhykavy/index.html" class="btn btn-primary">Druhy kávy</a>
-          <a href="../Káva/odrudykavy/index.html" class="btn btn-primary">Odrůdy kávy</a>
-          <a href="../Káva/historiekavy/index.html" class="btn btn-primary">Historie kávy</a>
-          <a href="../Káva/pripravakavy/index.html" class="btn btn-primary">Příprava kávy</a>
+          <a href="./puvodKavy/index.html" class="btn btn-primary">Původ kávy</a>
+          <a href="./druhykavy/index.html" class="btn btn-primary">Druhy kávy</a>
+          <a href="./odrudykavy/index.html" class="btn btn-primary">Odrůdy kávy</a>
+          <a href="./historiekavy/index.html" class="btn btn-primary">Historie kávy</a>
+          <a href="./pripravakavy/index.html" class="btn btn-primary">Příprava kávy</a>
         </div>
         <div class="col-md-6">
           <img src="./images/nathan-dumlao-KixfBEdyp64-unsplash.jpg" alt="Káva" class="img-fluid">
