--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <img src="./images/Coffee_art.jpg" class="d-block w-100"  alt="Coffee_art">
       </div>
       <div class="carousel-item">
-        <img src="../images/Coffee_machine.jpg" class="d-block w-100" alt="Coffee_machine">
+        <img src="./images/Coffee_machine.jpg" class="d-block w-100" alt="Coffee_machine">
       </div>
       <div class="carousel-item">
         <img src="./images/Coffee_beans.jpg" class="d-block w-100" alt="Coffee_beans">
