--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark my-navbar nav-link" >
     <div class="container">
-      <a class="navbar-brand" href="./index.html">Káva</a>
+      <a class="navbar-brand" href="./index.html">Káva<img src="./images/logo.png" alt="Logo"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
