--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark my-navbar nav-link" >
     <div class="container">
-      <a class="navbar-brand" href="./index.html">Káva<img src="./images/logo.png" alt="Logo"></a>
+      <a class="navbar-brand" href="./index.html">Káva</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -33,6 +33,9 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./pripravakavy/index.html">Příprava kávy</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./kavarny/index.html">Kavárny v Opavě</a>
           </li>
         </ul>
       </div>
