--- a/kavarny/index.html
+++ b/kavarny/index.html
@@ -4,26 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title class="title">Historie kávy</title>
-  <style>
-    .container {
-      display: flex;
-      align-items: center;
-    }
-    .text {
-      flex: 1;
-      padding-right: 20px;
-    }
-    .image {
-      flex: 1;
-    }
-    .image img {
-      max-width: 100%;
-      height: auto;
-    }
-  </style>
+  <title class="title">Původ kávy</title>
   <link rel="stylesheet" href="../style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.1/css/bootstrap.min.css">
+  
 </head>
 
 <body>
@@ -39,20 +23,20 @@
           <li class="nav-item">
             <a class="nav-link" href="../odrudykavy/index.html">Odrůdy kávy</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item ">
             <a class="nav-link" href="../puvodKavy/index.html">Původ kávy</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="../druhykavy/index.html">Druhy kávy</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="../historiekavy/index.html">Historie kávy</a>
+            <a class="nav-link" href="../historiekavy/index.html">Historie kávy</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="../pripravakavy/index.html">Příprava kávy</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../kavarny/index.html">Kavárny v Opavě</a>
+            <a class="nav-link active" href="../kavarny/index.html">Kavárny v Opavě</a>
           </li>
         </ul>
       </div>
@@ -86,33 +70,46 @@
       <span class="visually-hidden">Next</span>
     </a>
   </div>
- <main>
+  <main>
+    <h2 style="text-align:center;">Cafe Botaniqa</h2>
     <div class="container">
-        <div class="text">
-          <h1>Historie kávy</h1>
-          <div>
-            <h2>První zmínky o kávě</h2>
-            <p>První písemné zmínky o kávě pocházejí z 9. století z Etiopie, kde se používala jako povzbuzující nápoj. Legenda vypráví o střežených stromech s červenými bobulemi, které pastýř Kaldi objevil a z jejich plodů připravil povzbuzující nápoj. Káva byla považována za cenný poklad a její výroba a konzumace se postupně rozšiřovala.</p>
-          </div>
-          <div>
-            <h2>Rozšíření kávy</h2>
-            <p>V 15. století se káva začala rozšiřovat do arabského světa a odtud postupně do dalších částí světa. Arabové byli první, kteří kávu systematicky pěstovali a začali s její komerční produkcí. Arabští obchodníci ji přinesli do přístavů a stala se oblíbeným nápojem ve společnosti.</p>
-          </div>
-          <div>
-            <h2>Káva v Evropě</h2>
-            <p>V 17. století se káva stala populární v Evropě. První kavárny vznikly v italských přístavních městech a rychle se rozšířily do dalších zemí. Káva se stala společenským nápojem a kavárny se staly místem setkávání a diskuzí. Postupně se rozvinula i kultura přípravy a servírování kávy s různými metodami a styly.</p>
-          </div>
-          <div>
-            <h2>Průmyslová produkce kávy</h2>
-            <p>V průběhu 19. století se začala rozvíjet průmyslová produkce kávy. Byly vyvinuty nové techniky pražení a balení, což umožnilo masovou výrobu a distribuci kávy na celém světě. Káva se stala komoditou a obchodním artiklem s důležitým vlivem na ekonomiku mnoha zemí.</p>
-          </div>
+        <div class="row">
+          <div class="col-sm-4">
+            <h3>Můj pohled</h3>
+            <p>Tato kavárna je mou nejoblíbenější kavárnou. Je to skvělé místo kde si vypijete výbornou kávu a odpočnete si od poviností. Téma kavárny je botanické. Skvělá obsluha a výborné zákusky si vás zjískají hned po první návštěvě. Na stránkách kavárny si můžete přecíst bříběh, jak tato kavárna vznikla.</p>
+          <p> <a href="https://botaniqa.cz/o-nas/">Cofe Botaniqa</a>, zde si můžete přečíst příběh jak to všechno vzniklo, podívat se na menu a zarezervovat. </p>
         </div>
-        <div class="image">
-          <img src="../historiekavy/images/History-of-Coffee-1-scaled.jpg" alt="Historie kávy">
+          <div class="col-sm-4 text-center">
+            <img src="../kavarny/images/botaniqa.png" alt="Botaniqa" class="img-fluid">
+          </div>
+          <div class="col-sm-4">
+            <h5>Adresa:</h5>
+           <p>Růžová 14, Opava</p>
+           <h5>Doporučení</h5>
+           <p>Filtrovanou kávu, cappuccino a určitě ochutnejte cheese cake.</p>
+          </div>
         </div>
       </div>
- </main>
-
+      <h2 style="text-align:center; margin-top: 30px;">FoxCoffee</h2>
+      <div class="container">
+          <div class="row">
+            <div class="col-sm-4">
+              <h3>Můj pohled</h3>
+              <p>Tato kavárna mne zaujíma tím, že si sama praží kávu a tím je pro mne vyjímečná. Méně atraktivní je prosklenost kavárny, takže tam nemáte takové soukromí. Zbytek je super, kávy aji zákusty jsou výtečné.</p>
+            <p> <a href="https://botaniqa.cz/o-nas/">Cofe Botaniqa</a>, zde si můžete přečíst příběh jak to všechno vzniklo, podívat se na menu a zarezervovat. </p>
+          </div>
+            <div class="col-sm-4 text-center">
+              <img src="../kavarny/images/fox.png" alt="Botaniqa" class="img-fluid">
+            </div>
+            <div class="col-sm-4">
+              <h5>Adresa:</h5>
+             <p>Pekařská 2, Opava</p>
+             <h5>Doporučení</h5>
+             <p>Určitě podpořte tuto rodinnou pražírnu tím, že si zakoupíte jejich kávu a necháte si připravit mé oblibené espresso.</p>
+            </div>
+          </div>
+        </div>
+  </main>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.1/js/bootstrap.bundle.min.js"></script>
 <footer>
   <p>&copy; 2023 Moje Kávové Stránky  Aleš Včelka IT1</p>
