--- a/odrudykavy/index.html
+++ b/odrudykavy/index.html
@@ -51,6 +51,9 @@
           <li class="nav-item">
             <a class="nav-link" href="../pripravakavy/index.html">Příprava kávy</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../kavarny/index.html">Kavárny v Opavě</a>
+          </li>
         </ul>
       </div>
     </div>
