--- a/pripravakavy/index.html
+++ b/pripravakavy/index.html
@@ -35,6 +35,9 @@
           <li class="nav-item">
             <a class="nav-link active" href="../pripravakavy/index.html">Příprava kávy</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../kavarny/index.html">Kavárny v Opavě</a>
+          </li>
         </ul>
       </div>
     </div>
