--- a/historiekavy/index.html
+++ b/historiekavy/index.html
@@ -22,6 +22,8 @@
       height: auto;
     }
   </style>
+  <meta name="description"
+  content="Historie kávy">
   <link rel="stylesheet" href="../style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.1/css/bootstrap.min.css">
 </head>
@@ -89,21 +91,21 @@
  <main>
     <div class="container">
         <div class="text">
-          <h1>Historie kávy</h1>
+          <h2>Historie kávy</h2>
           <div>
-            <h2>První zmínky o kávě</h2>
+            <h4>První zmínky o kávě</h4>
             <p>První písemné zmínky o kávě pocházejí z 9. století z Etiopie, kde se používala jako povzbuzující nápoj. Legenda vypráví o střežených stromech s červenými bobulemi, které pastýř Kaldi objevil a z jejich plodů připravil povzbuzující nápoj. Káva byla považována za cenný poklad a její výroba a konzumace se postupně rozšiřovala.</p>
           </div>
           <div>
-            <h2>Rozšíření kávy</h2>
+            <h4>Rozšíření kávy</h4>
             <p>V 15. století se káva začala rozšiřovat do arabského světa a odtud postupně do dalších částí světa. Arabové byli první, kteří kávu systematicky pěstovali a začali s její komerční produkcí. Arabští obchodníci ji přinesli do přístavů a stala se oblíbeným nápojem ve společnosti.</p>
           </div>
           <div>
-            <h2>Káva v Evropě</h2>
+            <h4>Káva v Evropě</h4>
             <p>V 17. století se káva stala populární v Evropě. První kavárny vznikly v italských přístavních městech a rychle se rozšířily do dalších zemí. Káva se stala společenským nápojem a kavárny se staly místem setkávání a diskuzí. Postupně se rozvinula i kultura přípravy a servírování kávy s různými metodami a styly.</p>
           </div>
           <div>
-            <h2>Průmyslová produkce kávy</h2>
+            <h4>Průmyslová produkce kávy</h4>
             <p>V průběhu 19. století se začala rozvíjet průmyslová produkce kávy. Byly vyvinuty nové techniky pražení a balení, což umožnilo masovou výrobu a distribuci kávy na celém světě. Káva se stala komoditou a obchodním artiklem s důležitým vlivem na ekonomiku mnoha zemí.</p>
           </div>
         </div>
