--- a/kavarny/index.html
+++ b/kavarny/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title class="title">Původ kávy</title>
+  <meta name="description"
+  content="Doporučení kaváren v Opavě">
   <link rel="stylesheet" href="../style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.1/css/bootstrap.min.css">
   
@@ -96,10 +98,10 @@
             <div class="col-sm-4">
               <h3>Můj pohled</h3>
               <p>Tato kavárna mne zaujíma tím, že si sama praží kávu a tím je pro mne vyjímečná. Méně atraktivní je prosklenost kavárny, takže tam nemáte takové soukromí. Zbytek je super, kávy aji zákusty jsou výtečné.</p>
-            <p> <a href="https://botaniqa.cz/o-nas/">Cofe Botaniqa</a>, zde si můžete přečíst příběh jak to všechno vzniklo, podívat se na menu a zarezervovat. </p>
+        
           </div>
             <div class="col-sm-4 text-center">
-              <img src="../kavarny/images/fox.png" alt="Botaniqa" class="img-fluid">
+              <img src="../kavarny/images/fox.png" alt="Fox Coffee" class="img-fluid">
             </div>
             <div class="col-sm-4">
               <h5>Adresa:</h5>
