--- a/odrudykavy/index.html
+++ b/odrudykavy/index.html
@@ -22,6 +22,8 @@
       height: auto;
     }
   </style>
+  <meta name="description"
+  content="Odrůdy kávy">
   <link rel="stylesheet" href="../style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.1/css/bootstrap.min.css">
 </head>
@@ -92,12 +94,12 @@
         <div class="column">
           <p></p>
           <p></p>
-          <h1>Odrudy kávy</h1>
+          <h2>Odrůdy kávy</h2>
         </div>
       </div>
       <div class="container">
         <div class="column">
-          <h2>Arabika</h2>
+          <h3>Arabika</h3>
           <p>
             Arabika je nejrozšířenější odrůdou kávy na světě. Pěstuje se především v oblastech jako
             Etiopie, Kolumbie, Brazílie a dalších. Arabika je známá svým jemným a vyváženým
@@ -117,7 +119,7 @@
       </div>
       <div class="container">
         <div class="column">
-          <h2>Robusta</h2>
+          <h3>Robusta</h3>
           <p>
             Robusta je druhou nejčastěji pěstovanou odrůdou kávy. Je známá svou vyšší hladinou
             kofeinu a hořkou chutí. Robusta se často používá pro výrobu espresso kávy díky své
@@ -136,7 +138,7 @@
       </div>
       <div class="container">
         <div class="column">
-          <h2>Liberika</h2>
+          <h3>Liberika</h3>
           <p>
             Liberika je méně známá odrůda kávy, která se pěstuje převážně v Africe a Asii.
             Má velké ovoce a výraznou, exotickou chuť. Liberika je však méně rozšířená a
