--- a/puvodKavy/index.html
+++ b/puvodKavy/index.html
@@ -22,9 +22,21 @@
       max-width: 100%;
       height: auto;
     }
+    p{
+      text-align: left;
+    }
+    .footer{
+      text-align: center;
+    }
+    body{
+      padding: 10px;
+    }
   </style>
+  <meta name="description"
+  content="Původ kávy">
   <link rel="stylesheet" href="../style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.1/css/bootstrap.min.css">
+  
 </head>
 
 <body>
@@ -88,47 +100,47 @@
     </a>
   </div>
   <main>
+    <div class="container">
+        <h2>Původ kávy</h2>
+       
+        <p>
+          Káva pochází z tropických oblastí po celém světě. Největšími producenty kávy jsou země jako Brazílie,
+          Kolumbie, Etiopie a Vietnam. Každá z těchto zemí má své vlastní unikátní podmínky pro pěstování
+          a zpracování kávy, což ovlivňuje chuť a charakter jednotlivých odrud.
+        </p>
+        <p>
+          Výběr kávy z konkrétní pěstitelské oblasti může být skvělým způsobem, jak objevovat rozdíly
+          v chuti a aromatu mezi jednotlivými regiony. Můžete si vychutnat plnou a sladkou chuť
+          jihoamerických káv, nebo se ponořit do exotických tónů afrických káv s ovocnými a květinovými
+          aroma.
+        </p> 
+        <img src="../puvodKavy/images/oblasti.jpg" alt="Tropické oblasti">
+      </div>
     <section>
       <div class="container">
         <div class="column">
-          <h2>Původ kávy</h2>
-          <img src="../puvodKavy/images/oblasti.jpg" alt="Tropické oblasti">
-          <p>
-            Káva pochází z tropických oblastí po celém světě. Největšími producenty kávy jsou země jako Brazílie,
-            Kolumbie, Etiopie a Vietnam. Každá z těchto zemí má své vlastní unikátní podmínky pro pěstování
-            a zpracování kávy, což ovlivňuje chuť a charakter jednotlivých odrud.
-          </p>
-          <p>
-            Výběr kávy z konkrétní pěstitelské oblasti může být skvělým způsobem, jak objevovat rozdíly
-            v chuti a aromatu mezi jednotlivými regiony. Můžete si vychutnat plnou a sladkou chuť
-            jihoamerických káv, nebo se ponořit do exotických tónů afrických káv s ovocnými a květinovými
-            aroma.
-          </p>
-        </div>
-      <div class="container">
-        <div class="column">
-          <h2>Jižní Amerika</h2>
+          <h4>Jížní Amerika</h4>
           <img src="../puvodKavy/images/JAmerika.jpg" alt="Jižní Amerika">
           <p>
             Brazílie je největším producentem kávy na světě a vydává mnoho druhů arabiky. Kolumbie je známá svou kvalitní arabikou s vyváženou chutí. Dalšími významnými producenty jsou Peru, Ekvádor a Bolívie.
           </p>
         </div>
         <div class="column">
-          <h2>Střední Amerika</h2>
+          <h4>Střední Amerika</h4>
           <img src="../puvodKavy/images/SAmerika.jpg" alt="Střední Amerika">
           <p>
             Káva z regionu Střední Ameriky je obecně vyhlášená pro svou jemnost a jemné kyselosti. Costa Rica, Guatemala, Honduras a Salvador jsou známé producenty kávy ve Střední Americe.
           </p>
         </div>
         <div class="column">
-          <h2>Afrika</h2>
+          <h4>Afrika</h4>
           <img src="../puvodKavy/images/afrika.jpg" alt="Afrika">
           <p>
             Etiopie je považována za kolébku kávy a má dlouhou historii v pěstování kávovníku arabického. Káva z Keni je také ceněna pro svou vysokou kvalitu a výrazné ovocné tóny. Dalšími významnými africkými producenty jsou Tanzanie, Rwanda a Uganda.
           </p>
         </div>
         <div class="column">
-          <h2>Asie</h2>
+          <h4>Asie</h4>
           <img src="../puvodKavy/images/Asie.jpg" alt="Asie">
           <p>
             Káva z Asie se vyznačuje svými jedinečnými charakteristikami. Indonésie je největším producentem kávy v Asii a známá je zejména arabika z ostrova Sumatra. Vietnam je druhým největším producentem kávy na světě a specializuje se na robustu.
@@ -139,7 +151,7 @@
   </main>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.1/js/bootstrap.bundle.min.js"></script>
 <footer>
-  <p>&copy; 2023 Moje Kávové Stránky  Aleš Včelka IT1</p>
+  <p class="footer">&copy; 2023 Moje Kávové Stránky  Aleš Včelka IT1</p>
 </footer>
 </body>
 </html>
