--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
           <li class="nav-item">
             <a class="nav-link" href="./kavarny/index.html">Kavárny v Opavě</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./puvodKavy/index.html">Galerie</a>
+          </li>
         </ul>
       </div>
     </div>
