--- a/kavarny/index.html
+++ b/kavarny/index.html
@@ -40,6 +40,9 @@
           <li class="nav-item">
             <a class="nav-link active" href="../kavarny/index.html">Kavárny v Opavě</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../puvodKavy/index.html">Galerie</a>
+          </li>
         </ul>
       </div>
     </div>
