--- a/druhykavy/index.html
+++ b/druhykavy/index.html
@@ -59,7 +59,7 @@
             <a class="nav-link" href="../kavarny/index.html">Kavárny v Opavě</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../puvodKavy/index.html">Galerie</a>
+            <a class="nav-link" href="../galerie/index.html">Galerie</a>
           </li>
         </ul>
       </div>
