--- a/kavarny/index.html
+++ b/kavarny/index.html
@@ -41,7 +41,7 @@
             <a class="nav-link active" href="../kavarny/index.html">Kavárny v Opavě</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../puvodKavy/index.html">Galerie</a>
+            <a class="nav-link" href="../galerie/index.html">Galerie</a>
           </li>
         </ul>
       </div>
@@ -81,8 +81,8 @@
         <div class="row">
           <div class="col-sm-4">
             <h3>Můj pohled</h3>
-            <p>Tato kavárna je mou nejoblíbenější kavárnou. Je to skvělé místo kde si vypijete výbornou kávu a odpočnete si od poviností. Téma kavárny je botanické. Skvělá obsluha a výborné zákusky si vás zjískají hned po první návštěvě. Na stránkách kavárny si můžete přecíst bříběh, jak tato kavárna vznikla.</p>
-          <p> <a href="https://botaniqa.cz/o-nas/">Cofe Botaniqa</a>, zde si můžete přečíst příběh jak to všechno vzniklo, podívat se na menu a zarezervovat. </p>
+            <p>Tato kavárna je mou nejoblíbenější kavárnou. Je to skvělé místo kde si vypijete výbornou kávu a odpočnete si od povinností. Téma kavárny je botanické. Skvělá obsluha a výborné zákusky si vás zjískají hned po první návštěvě. Na stránkách kavárny si můžete přecíst bříběh, jak tato kavárna vznikla.</p>
+          <p> <a href="https://botaniqa.cz/o-nas/">Cofe Botaniqa</a>, zde si můžete přečíst příběh jak to všechno vzniklo, podívat se na menu a zarezervovat si místo k vychutnání kávy a zákusku. </p>
         </div>
           <div class="col-sm-4 text-center">
             <img src="../kavarny/images/botaniqa.png" alt="Botaniqa" class="img-fluid">
@@ -101,7 +101,7 @@
             <div class="col-sm-4">
               <h3>Můj pohled</h3>
               <p>Tato kavárna mne zaujíma tím, že si sama praží kávu a tím je pro mne vyjímečná. Méně atraktivní je prosklenost kavárny, takže tam nemáte takové soukromí. Zbytek je super, kávy aji zákusty jsou výtečné.</p>
-        
+        <p><a href="https://www.foxcoffee.cz/kontakt/">Stránky Fox coffee.</a></p>
           </div>
             <div class="col-sm-4 text-center">
               <img src="../kavarny/images/fox.png" alt="Fox Coffee" class="img-fluid">
@@ -110,7 +110,7 @@
               <h5>Adresa:</h5>
              <p>Pekařská 2, Opava</p>
              <h5>Doporučení</h5>
-             <p>Určitě podpořte tuto rodinnou pražírnu tím, že si zakoupíte jejich kávu a necháte si připravit mé oblibené espresso.</p>
+             <p>Určitě podpořte tuto rodinnou pražírnu tím, že si zakoupíte jejich kávu a necháte si připravit mé oblíbené espresso.</p>
             </div>
           </div>
         </div>
