--- a/pripravakavy/index.html
+++ b/pripravakavy/index.html
@@ -40,7 +40,7 @@
             <a class="nav-link" href="../kavarny/index.html">Kavárny v Opavě</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../puvodKavy/index.html">Galerie</a>
+            <a class="nav-link" href="../galerie/index.html">Galerie</a>
           </li>
         </ul>
       </div>
@@ -181,7 +181,7 @@
           <div class="col-sm-4">
             <h5>Jak vybrat?</h5>
             <ol>
-                <li>Zeptejte se sami sebe jak často bude kávovar používat.</li>
+                <li>Zeptejte se sami sebe jak často budete kávovar používat.</li>
                 <li>Kolik chcete investovat, nechat si rezervu na mlýnek.</li>
                 <li>Chuť se odvíjí od tlaku, příkonu a kvality kávy.</li>
               </ol>
