--- a/kavarny/index.html
+++ b/kavarny/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title class="title">Původ kávy</title>
+  <title class="title">Kavárny v Opavě</title>
   <meta name="description"
   content="Doporučení kaváren v Opavě">
   <link rel="stylesheet" href="../style.css">
