--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title class="title">Káva</title>
+  
   <meta name="description"
   content="Káva">
   <link rel="stylesheet" href="./style.css">
@@ -41,6 +42,9 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./galerie/index.html">Galerie</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./kviz/index.html">Kvíz</a>
           </li>
         </ul>
       </div>
@@ -84,11 +88,11 @@
           <p>Káva je oblíbený nápoj po celém světě. Její pověstná chuť a povzbuzující účinky ji činí jedním z nejoblíbenějších nápojů. Připojte se k nám a objevte více o kávě a jejích zajímavostech.</p>
           <p>Káva je původem z tropických oblastí, zejména z Jižní Ameriky, Afrického rohu a jihovýchodní Asie. Každá země původu má své specifické odrůdy a metody pěstování, což ovlivňuje chuť a aroma kávy. Na mojich stránkách najdete informace o různých druzích kávy a zemích, ze kterých pochází.</p>
           <p>Káva je také jedním z nejvíce konzumovaných nápojů na světě a nabízí širokou škálu způsobů přípravy. Bez ohledu na to, zda preferujete filtrovanou kávu, espresso nebo oblíbené kávové speciality, můžete se těšit na bohatou paletu chutí a vůní.</p>
-          <a href="./puvodKavy/index.html" class="btn btn-primary">Původ kávy</a>
-          <a href="./druhykavy/index.html" class="btn btn-primary">Druhy kávy</a>
-          <a href="./odrudykavy/index.html" class="btn btn-primary">Odrůdy kávy</a>
-          <a href="./historiekavy/index.html" class="btn btn-primary">Historie kávy</a>
-          <a href="./pripravakavy/index.html" class="btn btn-primary">Příprava kávy</a>
+          <a href="./puvodKavy/index.html" class="btn btn-dark">Původ kávy</a>
+          <a href="./druhykavy/index.html" class="btn btn-dark">Druhy kávy</a>
+          <a href="./odrudykavy/index.html" class="btn btn-dark">Odrůdy kávy</a>
+          <a href="./historiekavy/index.html" class="btn btn-dark">Historie kávy</a>
+          <a href="./pripravakavy/index.html" class="btn btn-dark">Příprava kávy</a>
         </div>
         <div class="col-md-6">
           <img src="./images/nathan-dumlao-KixfBEdyp64-unsplash.jpg" alt="Káva" class="img-fluid">
