--- a/odrudykavy/index.html
+++ b/odrudykavy/index.html
@@ -59,6 +59,9 @@
           <li class="nav-item">
             <a class="nav-link" href="../galerie/index.html">Galerie</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../kviz/index.html">Kvíz</a>
+          </li>
         </ul>
       </div>
     </div>
